// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`./ChainIndicator.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="indicator withLogo"
        data-testid="chain-logo"
      >
        <img
          alt="Ethereum Logo"
          data-testid="chain-indicator-network-logo-img"
          height="24"
          loading="lazy"
          src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
          style="min-width: 24px;"
          width="24"
        />
        <div
          class="flex flex-col"
        >
          <span
            class="name"
          >
            Ethereum
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`./ChainIndicator.stories HideUnknown 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    />
  </div>
</div>
`;

exports[`./ChainIndicator.stories Inline 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="inlineIndicator withLogo"
        data-testid="chain-logo"
      >
        <img
          alt="Ethereum Logo"
          data-testid="chain-indicator-network-logo-img"
          height="24"
          loading="lazy"
          src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
          style="min-width: 24px;"
          width="24"
        />
        <div
          class="flex flex-col"
        >
          <span
            class="name"
          >
            Ethereum
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`./ChainIndicator.stories LargeImage 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="indicator withLogo"
        data-testid="chain-logo"
      >
        <img
          alt="Ethereum Logo"
          data-testid="chain-indicator-network-logo-img"
          height="36"
          loading="lazy"
          src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
          style="min-width: 36px;"
          width="36"
        />
        <div
          class="flex flex-col"
        >
          <span
            class="name"
          >
            Ethereum
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`./ChainIndicator.stories NoLogo 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="indicator"
        data-testid="chain-logo"
        style="background-color: rgb(98, 126, 234); color: rgb(255, 255, 255);"
      >
        <div
          class="flex flex-col"
        >
          <span
            class="name"
          >
            Ethereum
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`./ChainIndicator.stories OnlyLogo 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="indicator withLogo onlyLogo"
        data-testid="chain-logo"
      >
        <img
          alt="Ethereum Logo"
          data-testid="chain-indicator-network-logo-img"
          height="24"
          loading="lazy"
          src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
          style="min-width: 24px;"
          width="24"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`./ChainIndicator.stories Responsive 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="indicator withLogo responsive"
        data-testid="chain-logo"
      >
        <img
          alt="Ethereum Logo"
          data-testid="chain-indicator-network-logo-img"
          height="24"
          loading="lazy"
          src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
          style="min-width: 24px;"
          width="24"
        />
        <div
          class="flex flex-col"
        >
          <span
            class="name"
          >
            Ethereum
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`./ChainIndicator.stories SmallImage 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="indicator withLogo"
        data-testid="chain-logo"
      >
        <img
          alt="Ethereum Logo"
          data-testid="chain-indicator-network-logo-img"
          height="16"
          loading="lazy"
          src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
          style="min-width: 16px;"
          width="16"
        />
        <div
          class="flex flex-col"
        >
          <span
            class="name"
          >
            Ethereum
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`./ChainIndicator.stories UnknownChain 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="indicator withLogo"
        data-testid="chain-logo"
      >
        <mock-icon
          class="rounded-full bg-[var(--color-background-main)]"
          style="height: 24px; width: 24px;"
        />
        <div
          class="flex flex-col"
        >
          <span
            class="name"
          >
            Unknown network
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`./ChainIndicator.stories WithFiatValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="rounded-lg bg-[var(--color-background-paper)] p-4"
    >
      <span
        class="indicator withLogo"
        data-testid="chain-logo"
      >
        <img
          alt="Ethereum Logo"
          data-testid="chain-indicator-network-logo-img"
          height="24"
          loading="lazy"
          src="https://safe-transaction-assets.staging.5afe.dev/chains/1/chain_logo.png"
          style="min-width: 24px;"
          width="24"
        />
        <div
          class="flex flex-col"
        >
          <span
            class="name"
          >
            Ethereum
          </span>
          <span
            class="m-0 text-sm leading-5 font-semibold"
            data-slot="typography"
            data-variant="paragraph-small-bold"
          >
            <span
              class="whitespace-nowrap"
              data-slot="tooltip-trigger"
              id="base-ui-_r_1_"
            >
              <span
                aria-hidden="true"
              >
                $ 1,235
              </span>
              <span
                class="sr-only"
              >
                $ 1,234.56
              </span>
            </span>
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;
